--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Index</title>
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <script src="main.js"></script>
+    <script src="codigo2.js"></script>
 </body>
 </html>
